--- a/MicrosoftPaintClone/MicrosoftPaintClone.csproj
+++ b/MicrosoftPaintClone/MicrosoftPaintClone.csproj
@@ -128,6 +128,7 @@
     <None Include="resources\line.PNG" />
     <None Include="resources\rectangle.PNG" />
     <None Include="resources\rectangle1.PNG" />
+    <None Include="resources\percentage zoom.PNG" />
     <Content Include="resources\selection shapes\freeform select.PNG" />
     <Content Include="resources\selection shapes\rectangular select.PNG" />
     <Content Include="resources\shapes icons\circle.PNG" />
